<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".EditorActivity">
    <EditText
        android:id="@+id/edit_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="text" />
    <EditText
        android:id="@+id/edit_price_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        android:inputType="number" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <Button
            android:layout_width="62dp"
            android:layout_weight="1"
            android:id="@+id/edit_quantity_increase"
            android:layout_height="wrap_content"
            android:text="+"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Price"
                android:layout_gravity="center"/>
        <EditText
            android:id="@+id/edit_quantity"
            android:hint="@string/product_quantity"
            android:text="0"
            android:layout_width="155dp"
            android:textAlignment="center"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="number" />
        </LinearLayout>
        <Button
            android:id="@+id/edit_quantity_decrease"
            android:layout_width="62dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="-"/>
    </LinearLayout>
    <EditText
        android:id="@+id/edit_supplier_name_text_field"
        android:hint="@string/supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_phone_text_field"
            android:hint="@string/supplier_phone"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:inputType="phone" />
        <Button
            android:id="@+id/call_supplier_button"
            android:layout_width="60dp"
            android:layout_marginLeft="12dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_call_black_24dp"/>
    </LinearLayout>
</LinearLayout>
